Tests/Modules/Error/Nested/.build/innerhandler.pr
{
  "name": "InnerHandler",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %innerErrorHandled% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%innerErrorHandled%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/Nested/InnerHandler.goal",
  "prPath": "/Modules/Error/Nested/.build/innerhandler.pr",
  "hash": "dd5be9a4665106e1df91cb580cec1e0ef0640e82a8c7e88b24bdc562ab4e8d43",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}